samples/_failures_safe/1760886001_8fc7b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6e1c801.c: In function ‘main’:
./samples/SAFE/__tmp_a6e1c801.c:167:18: error: ‘TOKEN’ undeclared (first use in this function)
  167 |             case TOKEN
      |                  ^~~~~
./samples/SAFE/__tmp_a6e1c801.c:167:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a6e1c801.c:167:13: error: expected ‘:’ or ‘...’ at end of input
  167 |             case TOKEN
      |             ^~~~
./samples/SAFE/__tmp_a6e1c801.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a6e1c801.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a6e1c801.c:167:13: error: expected declaration or statement at end of input
